Move the chart into the right spot and shrink it on mobile but container is hard-coded, looking for a fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -338,12 +338,26 @@ td.doodad-no-data{
       display: block;
       margin: 0 auto;
       width: 100%;
+      border: 1px solid red;
     }
     .google-chart {
-      width: 80%;
+      /*width: 100%;*/
       display: block;
-      margin: 1rem auto;
+      margin: 1rem 0;
+      margin-left: 0;
       padding: 10px;
+      border: 1px solid green;
+    }
+
+    #donutchart div {
+      margin: 0;
+    }
+
+    svg {
+      width: 200;
+      height: 200;
+      margin-left: -45px;
+      border: 3px dashed pink;
     }
 
     .content {
